# trading

./: .dockerignore  .gitignore  .mailmap  CLAUDE.md  LICENSE  README.md  buf.yaml  docker-compose.yml  gen_proto.py  nixpacks.toml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  skills-lock.json  start.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  migrate.yml
api/: .env.example  grpc_client.py  main.py  pyproject.toml
api/app/: auth.py  database.py  grpc_client.py  main.py
api/app/routers/: quotes.py
api/routers/: hello.py  quotes.py
api/routers/grpc/: hello.py  quotes.py
api/routers/no_grpc/: hello.py  quotes.py
backend/: .env.example  Dockerfile.base  pyproject.toml
backend/api/: .env.example  pyproject.toml
backend/api/app/: auth.py  bootstrap.py  config.py  dependencies.py  grpc_client.py  main.py  models.py  pipeline.py  pipeline_client.py  utils.py
backend/api/app/db/: __init__.py  models.py  redis.py
backend/api/app/rate_limit/: __init__.py  limiter.py
backend/api/app/routers/: health.py  historical_bars.py  holdings.py  orders.py  quotes.py  symbols.py  transactions.py  watchlist.py
backend/api/app/schemas/: holdings.py  watchlist.py
backend/api/app/services/: bars.py  trading.py
backend/api/app/ws/: __init__.py  alpaca_feed.py  flush.py  manager.py  router.py  scheduler.py
backend/api/app/ws/feeds/: alpaca.py
backend/api/tests/: test_health.py  test_historical_bars.py  test_trading_service.py  test_ws_manager.py
backend/app/: auth.py  config.py  dependencies.py  experience.py  main.py
backend/app/db/: __init__.py  models.py  redis.py  session.py
backend/app/rate_limit/: __init__.py  limiter.py  per_user.py
backend/app/routers/: accounts.py  company.py  holdings.py  kalshi.py  news.py  orders.py  quotes.py  strategies.py  symbols.py  test.py  transactions.py  watchlist.py
backend/app/schemas/: __init__.py  holdings.py  orders.py  quotes.py  strategies.py  transactions.py  watchlist.py
backend/app/services/: alpaca_rest.py  atr.py  bars.py  kalshi_auth.py  kalshi_rest.py  market_calendar.py  order_placement.py  quote_cache.py  strategy_engine.py  strategy_signals.py  trading.py  transactions.py
backend/app/services/news/: new_source_interface.py  news_sources.py
backend/app/strategies/kalshi/: __init__.py  base.py  mean_reversion.py  momentum.py  signals.py  threshold_drift.py
backend/app/tasks/: get_news.py  kalshi_bot.py  order_executor.py  strategy_executor.py
backend/app/ws/: __init__.py  flush.py  manager.py  router.py
backend/app/ws/feeds/: __init__.py  alpaca.py  base.py  mock.py
backend/lib/: pyproject.toml
backend/lib/proto/trading/: market_data.proto  persistence.proto  transformer.proto
backend/lib/trading_lib/: __init__.py  channel.py  config.py  db.py  models.py  pipeline.py  server.py  utils.py
backend/scripts/: gen_proto.py  setup.ts
backend/services/filter/: Dockerfile  pyproject.toml
backend/services/filter/app/: server.py
backend/services/filter/tests/: test_service.py
backend/services/market_data/: .env.example  Dockerfile  pyproject.toml
backend/services/market_data/app/: service.py
backend/services/market_data/tests/: test_service.py
backend/services/persistence/: .env.example  Dockerfile  pyproject.toml
backend/services/persistence/app/: server.py  service.py
backend/services/persistence/tests/: test_service.py
backend/services/scheduler/: .env.example  Dockerfile  pyproject.toml
backend/services/scheduler/app/: service.py
backend/services/transformer/: .env.example  Dockerfile  pyproject.toml
backend/services/transformer/app/: service.py
backend/services/transformer/tests/: test_service.py
backend/tests/: conftest.py  integration_helpers.py  test_accounts_router.py  test_alpaca_feed_handlers.py  test_atr_service.py  test_auth.py  test_company.py  test_holdings_router.py  test_kalshi_auth.py  test_kalshi_bot.py  test_kalshi_lifespan.py  test_kalshi_rest.py  test_kalshi_router.py  test_kalshi_schema_mirror.py  test_kalshi_signals.py  test_kalshi_strategy_mean_reversion.py  test_kalshi_strategy_momentum.py  test_kalshi_strategy_threshold_drift.py  test_lock_ordering_invariant.py  test_nyse_holidays_mirror.py  test_order_executor.py  test_order_executor_loop.py  test_orders_router.py  test_per_user_rate_limit.py  test_quotes_router.py  test_rate_limiter_label.py  test_strategies_router.py  test_strategy_engine.py  test_strategy_executor.py  test_strategy_signals.py  test_trading_service.py  test_transaction_kind_mirror.py  test_transactions_router.py  test_ws_manager.py  test_ws_router.py
backend/tests/integration/: test_pipeline.py
lib/: pyproject.toml
lib/trading_lib/: __init__.py  channel.py  config.py  db.py  interceptors.py  models.py  server.py
proto/: filter.proto  market_data.proto  transformer.proto
proto/trading/: filter.proto  transformer.proto
scripts/: dev-api.ts  gen_proto.py  migrate_services.py  setup.ts
services/: market_data.py  transformer.py
services/filter/: .env.example  Dockerfile  pyproject.toml
services/filter/app/: server.py  service.py
services/filter/tests/: test_service.py
services/market_data/: .env.example  Dockerfile  pyproject.toml
services/scheduler/: .env.example  Dockerfile  pyproject.toml
services/scheduler/app/: server.py  service.py
services/scheduler/tests/: test_scheduler.py
services/transformer/: Dockerfile  pyproject.toml
tests/integration/: test_pipeline.py
web/: .env.example  next.config.ts  package-lock.json  package.json  vitest.config.ts
web/migrations/: 0000_minor_ezekiel_stane.sql  0001_seed_symbols.sql  0001_wandering_scourge.sql  0002_marvelous_arclight.sql  0003_left_payback.sql  0004_open_beyonder.sql  0005_fat_nemesis.sql  0005_gorgeous_stardust.sql  0006_cooing_night_thrasher.sql  0006_symbol_trgm_indexes.sql  0007_cheerful_human_robot.sql  0007_magenta_crusher_hogan.sql  0008_common_alex_wilder.sql  0008_strategy_runtime_foundation.sql  0008_transaction_trade_columns_check.sql  0009_quick_unicorn.sql  (+4 more)
(+268 files in other folders)
