[project]
name = "grpc-demo"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "protobuf>=5.29.0",
    "httpx>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.1.0",
    "mypy-protobuf>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "services", "generated"]
