[project]
name = "trading-api"
version = "0.1.0"
description = "R U Trading API gateway"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.5",
    "fastapi>=0.129.0",
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.11",
    "pyjwt>=2.11.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "trading-lib",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
]

[tool.uv.sources]
trading-lib = { path = "../lib", editable = true }
