[project]
name = "trading"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "grpcio-reflection>=1.70.0",
    "grpcio-health-checking>=1.70.0",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=0.26.0"]

[tool.uv.sources]
trading-lib = { path = "lib", editable = true }

[tool.uv.workspace]
members = ["lib", "api", "services/*"]
