[project]
name = "trading"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.26.0",
]

[tool.uv.workspace]
members = ["api"]
