[project]
name = "trading-api"
version = "0.1.0"
description = "R U Trading API gateway"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "pyjwt>=2.11.0",
    "cryptography>=46.0.5",
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "redis[hiredis]>=5.0.0",
    "websockets>=15.0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.14.3",
    "feedparser>=6.0.12",
    "pandas>=3.0.1",
    "numpy>=2.4.3",
    "tzdata>=2025.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "httpx>=0.28.1",
    "anyio[trio]>=4.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
