[project]
name = "trading-lib"
version = "0.1.0"
description = "Shared library for R U Trading gRPC services"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "grpcio-reflection>=1.70.0",
    "grpcio-health-checking>=1.70.0",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trading_lib"]
