[project]
name = "trading-api"
version = "0.1.0"
description = "R U Trading API gateway"
dependencies = [
    "fastapi>=0.129.0",
    "uvicorn>=0.40.0",
    "pyjwt>=2.11.0",
    "cryptography>=46.0.5",
    "python-dotenv>=1.2.1",
    "trading-lib",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "httpx>=0.28.1"]

[tool.uv.sources]
trading-lib = { workspace = true }
