[project]
name = "trading-lib"
version = "0.1.0"
description = "Shared library for R U Trading backend"
dependencies = [
    "httpx>=0.28.1",
    "sqlalchemy>=2.0.46",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trading_lib"]
