[project]
name = "scheduler"
version = "0.1.0"
description = "Background scheduler for periodic data fetching"
requires-python = ">=3.13"
dependencies = [
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
    "trading-lib",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=0.26.0"]

[tool.uv.sources]
trading-lib = { path = "../../lib", editable = true }
